--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 :root {
     --primary-color: #22254b;
     --secondary-color: #373b69;
+    --oposite-color: aliceblue;
 
 }
 
@@ -25,10 +26,15 @@ body {
     overflow: hidden; */
 }
 
+h1 {
+    color: aliceblue;
+    font-family: Impact;
+}
+
 header {
     padding: 1rem;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     background-color: var(--secondary-color);
 }
 
@@ -122,4 +128,33 @@ main {
 
 .movie:hover .overview {
     transform: translateY(0);
+}
+
+#tags {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+
+}
+
+.tag {
+    color: var(--oposite-color);
+    padding: 10px 20px;
+    background-color: orange;
+    border-radius: 50px;
+    margin: 5px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#tags .high-light {
+    background-color: red;
+}
+
+.no-result {
+    /* TODO: modify it */
+    color: white;
 }
