--- a/styles/style.css
+++ b/styles/style.css
@@ -9,15 +9,31 @@
 :root {
     --primary-color: #22254b;
     --secondary-color: #373b69;
-    --oposite-color: aliceblue;
+    --opposite-color: #FCEFF9;
 
+
+    --primary-color: #1d3557;
+    --secondary-color: #457b9d;
+    --opposite-color: #FCEFF9;
+
+    /* --background-color: #454851; */
+    /* --secondary-color: #73956F; */
+    /* --third-color: #7BAE7F; */
+    /* --forth-color: #95D7AE; */
+    /* --opposite-color: #FCEFF9; */
+
+
+    --background-color: #1d3557;
+    --secondary-color: #457b9d;
+    --third-color: #a8dadc;
+    --forth-color: #f1faee;
+    --opposite-color: #e63946;
 }
 
 body {
     background-color: var(--primary-color);
     font-family: 'Poppins', sans-serif;
     margin: 0;
-
     /* display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,7 +60,7 @@ header {
     padding: 0.5rem 1rem;
     border-radius: 50px;
     font-size: 1rem;
-    color: aliceblue;
+    color: var(--forth-color);
     font-family: inherit;
 
 }
@@ -55,13 +71,15 @@ header {
 }
 
 .search::placeholder {
-    color: #7378C5;
+    color: var(--forth-color);
 }
 
 main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    min-height: 100vh;
+
 
 }
 
@@ -141,9 +159,9 @@ main {
 }
 
 .tag {
-    color: var(--oposite-color);
     padding: 10px 20px;
-    background-color: orange;
+    background-color: var(--secondary-color);
+    color: var(--forth-color);
     border-radius: 50px;
     margin: 5px;
     display: inline-block;
