--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,3 +12,30 @@ footer {
         color: var(--forth-color);
     }
 }
+
+.pagination {
+    display: flex;
+    margin: 10px 30px;
+    align-items: center;
+    justify-content: center;
+    color: var(--forth-color);
+
+    .page {
+        padding: 20px;
+        cursor: pointer;
+    }
+
+    .disabled {
+        cursor: not-allowed;
+        color: grey;
+    }
+
+    .current {
+        padding: 10px 15px;
+        border-radius: 50%;
+        border: 5px solid orange;
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+}
