--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,17 +1,185 @@
-footer {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    font-weight: bold;
-    padding: 2rem;
-    background-color: var(--secondary-color);
-    color: var(--third-color);
+@import url('https//fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap');
 
-    a {
-        text-decoration: none;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+:root {
+    // --primary-color: #22254b;
+    // --secondary-color: #373b69;
+    // --opposite-color: #FCEFF9;
+
+
+    --primary-color: #1d3557;
+    --secondary-color: #457b9d;
+    --opposite-color: #FCEFF9;
+
+    /* --background-color: #454851; */
+    /* --secondary-color: #73956F; */
+    /* --third-color: #7BAE7F; */
+    /* --forth-color: #95D7AE; */
+    /* --opposite-color: #FCEFF9; */
+
+
+    --background-color: #1d3557;
+    --secondary-color: #457b9d;
+    --third-color: #a8dadc;
+    --forth-color: #f1faee;
+    --opposite-color: #e63946;
+}
+
+body {
+    background-color: var(--primary-color);
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    overflow: hidden; */
+}
+
+h1 {
+    color: aliceblue;
+    font-family: Impact;
+}
+
+header {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--secondary-color);
+}
+
+.search {
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
+    padding: 0.5rem 1rem;
+    border-radius: 50px;
+    font-size: 1rem;
+    color: var(--forth-color);
+    font-family: inherit;
+
+    &:focus {
+        outline: 0;
+        background-color: var(--primary-color);
+    }
+
+    &::placeholder {
         color: var(--forth-color);
     }
 }
+
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.movie {
+    width: 300px;
+    margin: 1rem;
+    border-radius: 3px;
+    box-shadow: 0.2px 4px 5px rgba(0, 0, 0, .1);
+    background-color: var(--secondary-color);
+    position: relative;
+    overflow: hidden;
+
+    img {
+        width: 100%;
+    }
+
+    .overview {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: aliceblue;
+        color: var(--primary-color);
+        padding: 1rem;
+        max-height: 100%;
+        transform: translateY(101%);
+        transition: transform 0.3s ease-in;
+    }
+
+    &:hover {
+        .overview {
+            transform: translateY(0);
+        }
+    }
+}
+
+.movie-info {
+    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
+
+    h3 {
+        margin-top: 0;
+    }
+
+    span {
+        background-color: var(--primary-color);
+        padding: 0.2rem 0.5rem;
+        border-radius: 3px;
+        font-weight: bold;
+
+        &.green {
+            color: lightgreen;
+        }
+
+        &.orange {
+            color: orange;
+        }
+
+        &.red {
+            color: red;
+        }
+    }
+
+
+}
+
+#tags {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
+
+
+    .tag {
+        padding: 10px 20px;
+        background-color: var(--secondary-color);
+        color: var(--forth-color);
+        border-radius: 50px;
+        margin: 5px;
+        display: inline-block;
+        cursor: pointer;
+    }
+
+    .high-light {
+        background-color: red;
+    }
+
+}
+
+#tags .no-result {
+    /* TODO: modify it */
+    color: white;
+}
+
+
 
 .pagination {
     display: flex;
@@ -37,5 +205,19 @@ footer {
         font-size: 20px;
         font-weight: 600;
     }
+}
 
+footer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    font-weight: bold;
+    padding: 2rem;
+    background-color: var(--secondary-color);
+    color: var(--third-color);
+
+    a {
+        text-decoration: none;
+        color: var(--forth-color);
+    }
 }
